Removed invalid DCHECK from |loadWithParams:|.

Omnibox legitimately passes PAGE_TRANSITION_RELOAD for the same page
loads.

BUG=703709

Review-Url: https://codereview.chromium.org/2772903002
Cr-Commit-Position: refs/heads/master@{#459441}

Former-commit-id: e6eb96d661fb4e2ddf0ab5baaf6ee389854f0a86